@@ -6,6 +6,8 @@ HEAD
 - added qsig caller-name patch by Mario Goegel
 - recognise asterisk 1.4.1
 - register at CAPI with needed maxLogicalConnections only
+- don't send SELECT_B_PROTOCOL more than once
+- don't send more DATA_B3 messages than allowed by CAPI_MAX_B3_BLOCKS
 QSIG:
  - added support for different qsig variants
  - added support for rerouting informations on incoming calls
